Use a timer to deselect the images when export menu loses focus.

BUG: 125042

svn path=/trunk/extragear/graphics/digikam/; revision=1181333